--- a/prime video.ipynb
+++ b/prime video.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Project Overview\n",
     "\n",
-    "This project involves an in-depth exploratory analysis of a Netflix dataset to uncover meaningful insights and patterns in the platform's content. Key focus areas include analyzing the distribution of release years, identifying the most frequent actors, and exploring popular genres. Visualizations were created to highlight trends, such as the increasing number of releases over the years, the dominance of specific actors, and the popularity of documentaries and stand-up comedy."
+    "This project involves an in-depth exploratory analysis of a Prime Video dataset to uncover meaningful insights and patterns in the platform's content. Key focus areas include analyzing the distribution of release years, identifying the most frequent actors, and exploring popular genres. Visualizations were created to highlight trends, such as the increasing number of releases over the years, the dominance of specific actors, and the popularity of documentaries and stand-up comedy."
    ]
   },
   {
@@ -478,7 +478,7 @@
    "source": [
     "Imputation of Missing Values in Prime video Dataset\n",
     "\n",
-    "Missing values in selected columns of the Netflix dataset are imputed with the placeholder value \"Unknown.\" The columns chosen for imputation include 'director,' 'country,' 'cast,' 'rating,' and 'duration."
+    "Missing values in selected columns of the Prime Video dataset are imputed with the placeholder value \"Unknown.\" The columns chosen for imputation include 'director,' 'country,' 'cast,' 'rating,' and 'duration."
    ]
   },
   {
@@ -1537,9 +1537,9 @@
    "id": "a43ff24c",
    "metadata": {},
    "source": [
-    "he United States leads as the top content producer for Netflix, followed by India and the United Kingdom.\n",
+    "he United States leads as the top content producer for Prime Video, followed by India and the United Kingdom.\n",
     "\n",
-    "This reflects Netflix's strong partnerships in these countries to cater to their audience preference"
+    "This reflects Prime Video's strong partnerships in these countries to cater to their audience preference"
    ]
   },
   {
@@ -1811,7 +1811,7 @@
    "source": [
     "plt.figure(figsize=(14,6))\n",
     "sns.barplot(x=top_genres.values, y=top_genres.index, palette=['#00A8E8', '#232F3E'])\n",
-    "plt.title('Top 10 Genres on Netflix', fontsize=20)\n",
+    "plt.title('Top 10 Genres on Prime Video', fontsize=20)\n",
     "plt.xlabel('Count')\n",
     "plt.ylabel('Genre')\n",
     "plt.show()"
@@ -1823,7 +1823,7 @@
    "metadata": {},
    "source": [
     " Dramas, and Comedies are the most popular genres on Prime, dominating the platform's content library.\n",
-    "This highlights Netflix's focus on diverse storytelling to appeal to global audiences."
+    "This highlights Prime Video's focus on diverse storytelling to appeal to global audiences."
    ]
   },
   {
